@@ -1,4 +1,5 @@
-11-may-2010 - 10-may-2010 - adelikat - Loadstate updates input display
+12-may-2010 - adelikat - Movies now have a "finished" option.  If a playback stops the movie isn't cleared from memory, and can be replayed or a state loaded.  Similar functionality as DeSmuME and GENS rerecording
+11-may-2010 - adelikat - Loadstate updates input display
 11-may-2010 - ugetab - Win32 - Added Ram Search hotkeys for the first 6 search types in the list.
 10-may-2010 - ugetab - Added gui.getpixel() which gets any gui.pixel() set pixel colors, and possibly other functions. Added emu.getscreenpixel() which gets the RGB and Palette of any pixel on the screen.
 08-may-2010 - ugetab - Added savestate.object() which is savestate.create() with intuitive numbering under windows
